crates/executor/src/tests/sql/ddl/snapshots/view/query_temporary_view.snap
---
source: crates/executor/src/tests/sql/ddl/view.rs
description: "\"SELECT * FROM view_test ORDER BY id\""
info: "Setup queries: CREATE TEMPORARY VIEW view_test AS SELECT 1 AS id, 'Alice' AS name"
---
Ok(
    [
        "+----+-------+",
        "| id | name  |",
        "+----+-------+",
        "| 1  | Alice |",
        "+----+-------+",
    ],
)
